--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 .vscode
-
+.mypy_cache
+__pycache__
+*.pyc
+*.pyo
+*.pyd
+*.pyi
+*.egg-info
+*.egg
+*.dist-info
+*.dist
+*.build
+*.buildozer
+*.spec
+*.log
+*.pot
+*.po
