--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,16 @@
-.vscode
-.mypy_cache
-__pycache__
-*.pyc
-*.pyo
-*.pyd
-*.pyi
-*.egg-info
-*.egg
-*.dist-info
-*.dist
-*.build
-*.buildozer
-*.spec
-*.log
-*.pot
-*.po
+*
+!*docker*
+!Dockerfile
+!docker-compose.yml
+!README.md
+!.gitignore
+!data
+!models
+!outputs
+!db
+!data/**.txt
+!models/**.txt
+!outputs/**.txt
+!db/**.txt
+!main.py
+!requirements.txt
